--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
   <div class="flex-wrapper">
     <header>
       <div class="header-wrapper">
-        <figure class="logo">
-          <a href="index.html"><img src="images/cms-logo.png" alt="Community Science Museum logo" /></a>
-        </figure>
+        <a href="index.html" class="logo-wrapper">
+          <div class="logo">
+            <img src="images/cms-logo-new.png" alt="Community Science Museum logo" />
+          </div>
+          <span class="logo-text">CSM</span>
+        </a>
         <div class="header-content-wrapper">
           <div class="time-wrapper">
             <span class="fa fa-clock" id="header-time-icon"></span>
@@ -36,15 +39,14 @@
               class="fa fa-ticket-alt ticket-icon"></span></button>
         </div>
         <div class="modal" id="ticket-modal">
-          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i
-              class="fas fa-times close-icon"></i>
+          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i class="fas fa-times-circle close-icon"></i>
           </div>
           <div class="modal-body">
             <p class="modal-text">
-              Please choose the desired number of tickets and click proceed in
+              Please choose the desired number of tickets and proceed to checkout in
               order to finalize your purchase.
             </p>
-            <p class="modal-text"><a href="visit.html">Price list can be found here</a></p>
+            <p class="modal-text"><a href="visit.html#prices">Price list</a></p>
             <form class="ticket-form">
               <div class="form-block">
                 <label for="select" class="modal-label">Number of tickets</label>
@@ -62,7 +64,7 @@
                 <input type="date" id="date" name="date" value="2020-11-10" min="2020-11-10" max="2020-12-31">
               </div>
             </form>
-            <button class="button" id="modal-button">Checkout</button>
+            <button class="button" id="modal-button" disabled>Checkout</button>
           </div>
         </div>
       </div>
@@ -104,7 +106,7 @@
       <div class="hero-container">
         <div class="hero-content">
           <hgroup>
-            <h1 class="hero-heading">WELCOME to the Science Museum!</h1>
+            <h1 class="hero-heading">WELCOME to our science museum!</h1>
             <h2 class="hero-sub-heading">— The place where science comes to life</h2>
           </hgroup>
           <a href="https://www.ticketmaster.com/" class="button hero-button">
