--- a/explore.html
+++ b/explore.html
@@ -38,7 +38,8 @@
               class="fa fa-ticket-alt ticket-icon"></span></button>
         </div>
         <div class="modal" id="ticket-modal">
-          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i class="fas fa-times-circle close-icon"></i>
+          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i
+              class="fas fa-times-circle close-icon"></i>
           </div>
           <div class="modal-body">
             <p class="modal-text">
@@ -213,8 +214,8 @@
                 <h2 class="main-heading">Teachers & researchers</h2>
               </div>
               <hr class="heading-divider" />
-              <p class="main-heading-lead">— Are you a young person looking to learn more about science? Come
-                on down to our museum, there’s plenty to see and do</p>
+              <p class="main-heading-lead">— Are you a teacher who wants to bring your students, or maybe you are a
+                researcher wanting to collaborate with our museum?</p>
             </div>
             <div class="research-grid">
               <div class="info-box" id="item-4">
