--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
               class="fa fa-ticket-alt ticket-icon"></span></button>
         </div>
         <div class="modal" id="ticket-modal">
-          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i class="fas fa-times-circle close-icon"></i>
+          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i
+              class="fas fa-times-circle close-icon"></i>
           </div>
           <div class="modal-body">
             <p class="modal-text">
