some design fixes

--- a/about_us.html
+++ b/about_us.html
@@ -111,7 +111,7 @@
                 <div class="main-heading-left"></div>
                 <h1 class="main-heading">About us</h1>
               </div>
-              <hr class="heading-divider" />
+              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Let us explore together. Come join us at the Community Science Museum where
                 we’re committed
                 to making science accessible to all.</p>
@@ -167,7 +167,7 @@
                 <div class="main-heading-left"></div>
                 <h2 class="main-heading">Meet our passionate tour guides</h2>
               </div>
-              <hr class="heading-divider" />
+              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— We hope to see you soon
               </p>
             </div>
