--- a/exhibitions.html
+++ b/exhibitions.html
@@ -109,7 +109,7 @@
                 <div class="main-heading-left"></div>
                 <h1 class="main-heading">Exhibition spaces</h1>
               </div>
-              <hr class="heading-divider" />
+              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Our more than 1000 unique exhibitions are dived into 5 main
                 spaces for you to explore</p>
             </div>
@@ -251,7 +251,7 @@
                 <div class="main-heading-left"></div>
                 <h2 class="main-heading">More to explore</h2>
               </div>
-              <hr class="heading-divider" />
+              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Come visit us and continue your exploration</p>
             </div>
             <div class="gallery-wrapper">
