--- a/visit.html
+++ b/visit.html
@@ -113,7 +113,7 @@
                   Admission, location & opening hours
                 </h1>
               </div>
-              <hr class="heading-divider" />
+              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— You will find us right in the heart of Bergen
               </p>
             </div>
@@ -228,7 +228,7 @@
                   Facilities
                 </h2>
               </div>
-              <hr class="heading-divider" />
+              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Our museum offers top modern facilities</p>
             </div>
 
