--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                 <div class="main-heading-left"></div>
                 <h1 class="main-heading">Contact</h1>
               </div>
-              <hr class="heading-divider" />
+              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Please submit your inquiry, and we will get back to you as soon as
                 possible</p>
             </div>
@@ -170,7 +170,7 @@
                 <div class="main-heading-left"></div>
                 <h2 class="main-heading">FAQ</h2>
               </div>
-              <hr class="heading-divider" />
+              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Commonly asked questions about our museum</p>
             </div>
             <ol class="faq">
