--- a/explore.html
+++ b/explore.html
@@ -111,7 +111,7 @@
                 <div class="main-heading-left"></div>
                 <h1 class="main-heading">For kids</h1>
               </div>
-              <hr class="heading-divider" />
+              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Are you a young person looking to learn more about science?</p>
             </div>
             <div class="kids-container">
@@ -213,7 +213,7 @@
                 <div class="main-heading-left"></div>
                 <h2 class="main-heading">Teachers & researchers</h2>
               </div>
-              <hr class="heading-divider" />
+              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Are you a teacher who wants to bring your students, or maybe you are a
                 researcher wanting to collaborate with our museum?</p>
             </div>
